// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ContextProvider
  value={
    {
      "className": "orion-fusion-theme",
      "density": undefined,
      "name": undefined,
    }
  }
>
  <div>
    <withRouter(ApplicationTabs)
      links={
        [
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test1",
            "text": "test 1",
          },
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test2",
            "text": "test 2",
          },
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test3",
            "text": "test 3",
          },
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test4",
            "text": "test 4",
          },
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test5",
            "text": "test 5",
          },
          {
            "icon": <IconFeatured
              data-name="Layer 1"
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "path": "/test6",
            "text": "test 6",
          },
        ]
      }
    />
  </div>
</ContextProvider>
`;

exports[`should render ApplicationTabs with icons 1`] = `
<div>
  <withRouter(ApplicationTabs)
    links={
      [
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test1",
          "text": "test 1",
        },
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test2",
          "text": "test 2",
        },
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test3",
          "text": "test 3",
        },
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test4",
          "text": "test 4",
        },
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test5",
          "text": "test 5",
        },
        {
          "icon": <IconFeatured
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "path": "/test6",
          "text": "test 6",
        },
      ]
    }
  />
</div>
`;

exports[`should render ApplicationTabs with links and alignment 1`] = `
<div>
  <withRouter(ApplicationTabs)
    alignment="start"
    links={
      [
        {
          "path": "/test1",
          "text": "test 1",
        },
        {
          "path": "/test2",
          "text": "test 2",
        },
        {
          "path": "/test3",
          "text": "test 3",
        },
        {
          "path": "/test4",
          "text": "test 4",
        },
        {
          "path": "/test5",
          "text": "test 5",
        },
        {
          "path": "/test6",
          "text": "test 6",
        },
      ]
    }
  />
</div>
`;
